Add sample export script

--- a/src/notebooks/step_01_open_data.ipynb
+++ b/src/notebooks/step_01_open_data.ipynb
@@ -420,257 +420,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>userName</th>\n",
-       "      <th>userImage</th>\n",
-       "      <th>content</th>\n",
-       "      <th>score</th>\n",
-       "      <th>thumbsUpCount</th>\n",
-       "      <th>reviewCreatedVersion</th>\n",
-       "      <th>at</th>\n",
-       "      <th>file_origin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8347</th>\n",
-       "      <td>47</td>\n",
-       "      <td>Junior Cavalcante</td>\n",
-       "      <td>https://lh3.googleusercontent.com/-7uyP9D16eP0...</td>\n",
-       "      <td>Boa tarde à todos. Gostaria de informar um oco...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>145</td>\n",
-       "      <td>1.113.0</td>\n",
-       "      <td>2020-01-01 14:00:00</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2413</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Extreme Master</td>\n",
-       "      <td>https://lh3.googleusercontent.com/a-/AAuE7mDFF...</td>\n",
-       "      <td>O jogo é muito bom bons graficos sempre fazend...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>9.2.16</td>\n",
-       "      <td>2020-01-22 11:17:36</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10956</th>\n",
-       "      <td>56</td>\n",
-       "      <td>Iago Ximango</td>\n",
-       "      <td>https://lh3.googleusercontent.com/-G-WOEjxm2ig...</td>\n",
-       "      <td>O jogo sempre foi muito bom, mas depois desse ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.10.1</td>\n",
-       "      <td>2019-01-18 22:31:49</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1152</th>\n",
-       "      <td>52</td>\n",
-       "      <td>josiel victor</td>\n",
-       "      <td>https://lh3.googleusercontent.com/-gHnNgmEW0kM...</td>\n",
-       "      <td>Acho meio injusto por alguem de nivel 40 com o...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1_45_111</td>\n",
-       "      <td>2019-12-26 10:03:12</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4946</th>\n",
-       "      <td>46</td>\n",
-       "      <td>Mónica Meira</td>\n",
-       "      <td>https://lh3.googleusercontent.com/-4827pfJVfrM...</td>\n",
-       "      <td>O jogo é muito bom e tal mas a razão por eu só...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2.2.2.1</td>\n",
-       "      <td>2019-07-08 11:27:33</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7648</th>\n",
-       "      <td>48</td>\n",
-       "      <td>Paçoca</td>\n",
-       "      <td>https://lh3.googleusercontent.com/a-/AAuE7mCnR...</td>\n",
-       "      <td>divertido, de estratégia e sempre com coisas n...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.13.25</td>\n",
-       "      <td>2020-01-20 16:53:46</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>Gabriela Dantas</td>\n",
-       "      <td>https://lh3.googleusercontent.com/a-/AAuE7mCgD...</td>\n",
-       "      <td>Está travando muito. Em apenas uma semana inst...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21.85</td>\n",
-       "      <td>2020-02-09 22:13:17</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2651</th>\n",
-       "      <td>51</td>\n",
-       "      <td>Marcelo Gastão Boff Jacomel</td>\n",
-       "      <td>https://lh3.googleusercontent.com/-5-pFfSltdLw...</td>\n",
-       "      <td>Tem que ter grana ou paciência , pra conseguir...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.24.3</td>\n",
-       "      <td>2019-12-26 21:30:13</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2537</th>\n",
-       "      <td>37</td>\n",
-       "      <td>Lucas Gah</td>\n",
-       "      <td>https://lh3.googleusercontent.com/-HaCGjvvFbt0...</td>\n",
-       "      <td>Divertido e fácil de aprender</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.4.10</td>\n",
-       "      <td>2020-01-26 02:12:21</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2076</th>\n",
-       "      <td>76</td>\n",
-       "      <td>Giovanni Mattos</td>\n",
-       "      <td>https://lh3.googleusercontent.com/a-/AAuE7mDzJ...</td>\n",
-       "      <td>Tá muito bugado na guerra do navio vc destrói ...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>40.93</td>\n",
-       "      <td>2019-12-19 10:23:19</td>\n",
-       "      <td>/home/henriquegomide/videogame-addiction-play-...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0                     userName  \\\n",
-       "8347           47            Junior Cavalcante   \n",
-       "2413           13               Extreme Master   \n",
-       "10956          56                 Iago Ximango   \n",
-       "1152           52                josiel victor   \n",
-       "4946           46                 Mónica Meira   \n",
-       "...           ...                          ...   \n",
-       "7648           48                       Paçoca   \n",
-       "23             23              Gabriela Dantas   \n",
-       "2651           51  Marcelo Gastão Boff Jacomel   \n",
-       "2537           37                    Lucas Gah   \n",
-       "2076           76              Giovanni Mattos   \n",
-       "\n",
-       "                                               userImage  \\\n",
-       "8347   https://lh3.googleusercontent.com/-7uyP9D16eP0...   \n",
-       "2413   https://lh3.googleusercontent.com/a-/AAuE7mDFF...   \n",
-       "10956  https://lh3.googleusercontent.com/-G-WOEjxm2ig...   \n",
-       "1152   https://lh3.googleusercontent.com/-gHnNgmEW0kM...   \n",
-       "4946   https://lh3.googleusercontent.com/-4827pfJVfrM...   \n",
-       "...                                                  ...   \n",
-       "7648   https://lh3.googleusercontent.com/a-/AAuE7mCnR...   \n",
-       "23     https://lh3.googleusercontent.com/a-/AAuE7mCgD...   \n",
-       "2651   https://lh3.googleusercontent.com/-5-pFfSltdLw...   \n",
-       "2537   https://lh3.googleusercontent.com/-HaCGjvvFbt0...   \n",
-       "2076   https://lh3.googleusercontent.com/a-/AAuE7mDzJ...   \n",
-       "\n",
-       "                                                 content  score  \\\n",
-       "8347   Boa tarde à todos. Gostaria de informar um oco...      3   \n",
-       "2413   O jogo é muito bom bons graficos sempre fazend...      4   \n",
-       "10956  O jogo sempre foi muito bom, mas depois desse ...      3   \n",
-       "1152   Acho meio injusto por alguem de nivel 40 com o...      4   \n",
-       "4946   O jogo é muito bom e tal mas a razão por eu só...      4   \n",
-       "...                                                  ...    ...   \n",
-       "7648   divertido, de estratégia e sempre com coisas n...      5   \n",
-       "23     Está travando muito. Em apenas uma semana inst...      2   \n",
-       "2651   Tem que ter grana ou paciência , pra conseguir...      2   \n",
-       "2537                       Divertido e fácil de aprender      5   \n",
-       "2076   Tá muito bugado na guerra do navio vc destrói ...      2   \n",
-       "\n",
-       "       thumbsUpCount reviewCreatedVersion                   at  \\\n",
-       "8347             145              1.113.0  2020-01-01 14:00:00   \n",
-       "2413               4               9.2.16  2020-01-22 11:17:36   \n",
-       "10956              3               1.10.1  2019-01-18 22:31:49   \n",
-       "1152               9             1_45_111  2019-12-26 10:03:12   \n",
-       "4946              24              2.2.2.1  2019-07-08 11:27:33   \n",
-       "...              ...                  ...                  ...   \n",
-       "7648               0              1.13.25  2020-01-20 16:53:46   \n",
-       "23                 0                21.85  2020-02-09 22:13:17   \n",
-       "2651               2               2.24.3  2019-12-26 21:30:13   \n",
-       "2537               0               1.4.10  2020-01-26 02:12:21   \n",
-       "2076               3                40.93  2019-12-19 10:23:19   \n",
-       "\n",
-       "                                             file_origin  \n",
-       "8347   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "2413   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "10956  /home/henriquegomide/videogame-addiction-play-...  \n",
-       "1152   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "4946   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "...                                                  ...  \n",
-       "7648   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "23     /home/henriquegomide/videogame-addiction-play-...  \n",
-       "2651   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "2537   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "2076   /home/henriquegomide/videogame-addiction-play-...  \n",
-       "\n",
-       "[100 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Export sampled data\n",
-    "data.sample(n=100, random_state=123456)\n",
-    "data.to_csv('/home/henriquegomide/videogame-addiction-play-store/var/data/most_relevant_comments_sampled.csv')"
+    "data_sampled = data.sample(n=100, random_state=123456)\n",
+    "data_sampled.to_csv('/home/henriquegomide/videogame-addiction-play-store/var/data/most_relevant_comments_sampled.csv')"
    ]
   },
   {
