fix code for most relevant content

--- a/src/notebooks/step_01_open_data.ipynb
+++ b/src/notebooks/step_01_open_data.ipynb
@@ -12,7 +12,7 @@
     "import os\n",
     "\n",
     "def create_list_of_app_ids():\n",
-    "    path = '/home/henriquegomide/videogame-addiction-play-store/var/data'\n",
+    "    path = '/home/henriquegomide/'videogame-addiction-play-store/var/data'\n",
     "    files = glob.glob(path + '/*.csv')\n",
     "    files_list = []\n",
     "    for filename in files:\n",
