--- a/src/notebooks/step_01_open_data.ipynb
+++ b/src/notebooks/step_01_open_data.ipynb
@@ -12,7 +12,7 @@
     "import os\n",
     "\n",
     "def create_list_of_app_ids():\n",
-    "    path = '/home/henriquegomide/'videogame-addiction-play-store/var/data'\n",
+    "    path = '../../var/data/'\n",
     "    files = glob.glob(path + '/*.csv')\n",
     "    files_list = []\n",
     "    for filename in files:\n",
@@ -78,102 +78,102 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>\\nZynga Poker – Free Texas Holdem Online Card ...</td>\n",
+       "      <td>\\nMARVEL Future Fight\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2,387,346</td>\n",
+       "      <td>2,759,302</td>\n",
        "      <td>50.0 M</td>\n",
-       "      <td>4.46</td>\n",
+       "      <td>4.39</td>\n",
+       "      <td>0.4%</td>\n",
        "      <td>0.7%</td>\n",
-       "      <td>1.4%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>com.zynga.livepoker</td>\n",
-       "      <td>GAME_CASINO</td>\n",
+       "      <td>com.netmarble.mherosgb</td>\n",
+       "      <td>GAME_ROLE_PLAYING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>\\nSlotomania™ Slots Casino: Vegas Slot Machine...</td>\n",
+       "      <td>\\nAngry Birds Epic RPG\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1,617,779</td>\n",
-       "      <td>50.0 M</td>\n",
-       "      <td>4.37</td>\n",
-       "      <td>0.8%</td>\n",
-       "      <td>1.6%</td>\n",
+       "      <td>2,655,384</td>\n",
+       "      <td>10.0 M</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>0.0%</td>\n",
+       "      <td>0.0%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>air.com.playtika.slotomania</td>\n",
-       "      <td>GAME_CASINO</td>\n",
+       "      <td>com.rovio.gold</td>\n",
+       "      <td>GAME_ROLE_PLAYING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>\\nTeen Patti by Octro - Indian Poker Card Game\\n</td>\n",
+       "      <td>\\nShadow Fight 3\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1,412,462</td>\n",
+       "      <td>2,527,699</td>\n",
        "      <td>50.0 M</td>\n",
-       "      <td>4.44</td>\n",
-       "      <td>0.2%</td>\n",
-       "      <td>0.5%</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.5%</td>\n",
+       "      <td>2.8%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>com.octro.teenpatti</td>\n",
-       "      <td>GAME_CASINO</td>\n",
+       "      <td>com.nekki.shadowfight3</td>\n",
+       "      <td>GAME_ROLE_PLAYING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>\\nCoin Dozer: Sweepstakes\\n</td>\n",
+       "      <td>\\nFlight Pilot Simulator 3D Free\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1,379,260</td>\n",
-       "      <td>50.0 M</td>\n",
-       "      <td>4.59</td>\n",
+       "      <td>2,460,471</td>\n",
+       "      <td>100.0 M</td>\n",
+       "      <td>4.31</td>\n",
        "      <td>0.8%</td>\n",
-       "      <td>1.6%</td>\n",
+       "      <td>1.4%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>com.leftover.CoinDozer</td>\n",
-       "      <td>GAME_CASINO</td>\n",
+       "      <td>com.fungames.flightpilot</td>\n",
+       "      <td>GAME_ROLE_PLAYING</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>\\nSlots: House of Fun™️ Casino Slot Machine Ga...</td>\n",
+       "      <td>\\nAvakin Life - 3D Virtual World\\n</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1,254,424</td>\n",
-       "      <td>10.0 M</td>\n",
-       "      <td>4.56</td>\n",
-       "      <td>1.2%</td>\n",
-       "      <td>2.4%</td>\n",
+       "      <td>2,415,258</td>\n",
+       "      <td>50.0 M</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>3.1%</td>\n",
+       "      <td>5.8%</td>\n",
        "      <td>Free</td>\n",
-       "      <td>com.pacificinteractive.HouseOfFun</td>\n",
-       "      <td>GAME_CASINO</td>\n",
+       "      <td>com.lockwoodpublishing.avakinlife</td>\n",
+       "      <td>GAME_ROLE_PLAYING</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  rank                                              title  icon  \\\n",
-       "0           0   1.0  \\nZynga Poker – Free Texas Holdem Online Card ...   NaN   \n",
-       "1           1   2.0  \\nSlotomania™ Slots Casino: Vegas Slot Machine...   NaN   \n",
-       "2           2   3.0   \\nTeen Patti by Octro - Indian Poker Card Game\\n   NaN   \n",
-       "3           3   4.0                        \\nCoin Dozer: Sweepstakes\\n   NaN   \n",
-       "4           4   5.0  \\nSlots: House of Fun™️ Casino Slot Machine Ga...   NaN   \n",
+       "   Unnamed: 0  rank                               title  icon ↓Total ratings  \\\n",
+       "0           0   1.0             \\nMARVEL Future Fight\\n   NaN      2,759,302   \n",
+       "1           1   2.0            \\nAngry Birds Epic RPG\\n   NaN      2,655,384   \n",
+       "2           2   3.0                  \\nShadow Fight 3\\n   NaN      2,527,699   \n",
+       "3           3   4.0  \\nFlight Pilot Simulator 3D Free\\n   NaN      2,460,471   \n",
+       "4           4   5.0  \\nAvakin Life - 3D Virtual World\\n   NaN      2,415,258   \n",
        "\n",
-       "  ↓Total ratings Installs  Average rating Growth (30 days) Growth (60 days)  \\\n",
-       "0      2,387,346   50.0 M            4.46             0.7%             1.4%   \n",
-       "1      1,617,779   50.0 M            4.37             0.8%             1.6%   \n",
-       "2      1,412,462   50.0 M            4.44             0.2%             0.5%   \n",
-       "3      1,379,260   50.0 M            4.59             0.8%             1.6%   \n",
-       "4      1,254,424   10.0 M            4.56             1.2%             2.4%   \n",
+       "  Installs  Average rating Growth (30 days) Growth (60 days) Price  \\\n",
+       "0   50.0 M            4.39             0.4%             0.7%  Free   \n",
+       "1   10.0 M            4.55             0.0%             0.0%  Free   \n",
+       "2   50.0 M            4.00             1.5%             2.8%  Free   \n",
+       "3  100.0 M            4.31             0.8%             1.4%  Free   \n",
+       "4   50.0 M            4.32             3.1%             5.8%  Free   \n",
        "\n",
-       "  Price                             app_id     category  \n",
-       "0  Free                com.zynga.livepoker  GAME_CASINO  \n",
-       "1  Free        air.com.playtika.slotomania  GAME_CASINO  \n",
-       "2  Free                com.octro.teenpatti  GAME_CASINO  \n",
-       "3  Free             com.leftover.CoinDozer  GAME_CASINO  \n",
-       "4  Free  com.pacificinteractive.HouseOfFun  GAME_CASINO  "
+       "                              app_id           category  \n",
+       "0             com.netmarble.mherosgb  GAME_ROLE_PLAYING  \n",
+       "1                     com.rovio.gold  GAME_ROLE_PLAYING  \n",
+       "2             com.nekki.shadowfight3  GAME_ROLE_PLAYING  \n",
+       "3           com.fungames.flightpilot  GAME_ROLE_PLAYING  \n",
+       "4  com.lockwoodpublishing.avakinlife  GAME_ROLE_PLAYING  "
       ]
      },
      "execution_count": 3,
@@ -205,7 +205,7 @@
     "# Open Comments data that were scraped as most relevant\n",
     "list_of_paths = []\n",
     "for app in list_of_ids:\n",
-    "    paths = '/home/henriquegomide/videogame-addiction-play-store/var/data/{0}'.format(app)\n",
+    "    paths = '../../var/data/{0}'.format(app)\n",
     "    list_of_paths.append(paths)\n",
     "    \n",
     "list_of_files = []\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        " 'file_origin']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "(14000, 9)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,20 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    Um bom tempo sem ganhar, a não ser brindes. Jo...\n",
-       "1    Já havia notado que o jogo é tendencioso. Mas ...\n",
-       "2    Dei apenas 1 pq não tinha como dar nenhuma, pe...\n",
-       "3    Na minha opinião, é pouco realista em relação ...\n",
+       "0    O jogo está ficando cada vez mais mercenário, ...\n",
+       "1    A cada atualização (mensal), o jogo fica mais ...\n",
+       "2    não são dignos de ganhar nem 1 estrela, jogo d...\n",
+       "3    Os desenvolvedores não Jogam o Jogo, não ouvem...\n",
        "Name: content, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
     {
      "data": {
       "text/plain": [
-       "'Um bom tempo sem ganhar, a não ser brindes. Jogo está deixando a desejar a cada dia que passa, nitidamente manipulado, principalmente em apostas altas, fora o monte de robôs que o jogo aparenta ter. Vocês que acham que pagar lhe darão privilégios, tá muito enganado, a 15 dias +/- fiz uma compra de 600K , e já me levaram 618K nesse período, 2 vitórias somente. Esse jogo é totalmente desonesto, e quem é responsável por esse Play Store é conivente com tudo isso. JOGO LADRÃO, DESONESTO E MANIPULADO.'"
+       "'O jogo está ficando cada vez mais mercenário, ainda mais com a vinda desse passe futuro que tem dois níveis de compra e o primeiro custa quase R$40... Tem muitos erros no jogo que são ignorados, muitos personagens que foram esquecidos e o pior se você não gasta dinheiro com o jogo você não vai muito longe e fica chato depois de um tempo ainda mais com esse passe futuro que você teria que gastar mais de R$150... Se continuar eu irei parar de jogar e gastar com o jogo'"
       ]
      },
      "execution_count": 11,
@@ -350,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Esse jogo é muito legal, por isso que eu dei cinco estrelas por causa que um jogo muito legal, eu amo o jogo da Ângela. Ela é super hiper mega legal super legal mesmo, só que ela deveria dar esse jogo poderia melhorar numa coisa que a gente poder tipo assim. A gente poder conversar com tu mesmo, se a pessoa não tem um jogo tipo ela poder ligar para então e também os jogos que não que estão bloqueados que só tem só pode jogar assim que vai no nosso celular. Isso é injusto. Isso é injusto mesmo en'"
+       "'Não estou gostando mais do jogo, porquê os aquários não estão desbloqueando, mesmo já tendo completado as estrelas dos anteriores. Além disso, aparece que está faltando estrelas para completar, sendo que eu já completei. Por isso, queria saber o que está acontecendo, estou pensando seriamente em desinstalar. Por favor, Alguém me responde!'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +370,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'O jogo é bom para entreter. Mas o que dificulta demais é que é tudo americano. Algumas marcas não vemos por aqui (Brasil). As dicas em inglês não ajudam em nada se não soubermos falar a língua, ficamos dependentes de um tradutor online. Se não fosse isso tudo, daria 5 estrelas !!!'"
+       "'Durante alguns tempos muito boa, hoje quis jogar e ao abrir para meu espanto puseram me a começar do zero. Acho isso completamente inconcebível..... Agora voltei a tentar e voltou a aparecer tudo certo. Vou ficar a analisar durante um tempo para ver o comportamento.'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,16 +390,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'O jogo é excelente!!! O gráfico é ótimo, a jogabilidade é incrível e as armas são fantásticas. Mas, focando no quesito de subir no ranking, vocês poderiam utilizar todos os modos para subir no ranking. Outra observação seria que vocês adicionassem o modo de terceira pessoa nos outros modos de jogo, tanto, multiplayer como zumbi ou jogo de armas. Não tenho nenhuma crítica a fazer com relação ao jogo porque está excelente; só opiniões mesmo. Parabéns a equipe.👏👏'"
+       "'Muito bom. O que falta é opção de outros idiomas. Foi o principal motivo de faltar a 5ª estrela na minha avaliação. Ainda estou no começo do jogo, mas a jogabilidade é simples e intuitiva. O que atrapalha um pouco é que as vezes a gente tenta arrastar a tela e acaba por deslocar um personagem p outro lugar, as vezes sem perceber, podendo prejudicar bastante a evolução do jogo.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,23 +410,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export data\n",
-    "data.to_csv('/home/henriquegomide/videogame-addiction-play-store/var/data/most_relevant_comments.csv')"
+    "data.to_csv('~/Downloads/most_relevant_comments.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export sampled data\n",
     "data_sampled = data.sample(n=100, random_state=123456)\n",
-    "data_sampled.to_csv('/home/henriquegomide/videogame-addiction-play-store/var/data/most_relevant_comments_sampled.csv')"
+    "data_sampled.to_csv('~/Downloads/most_relevant_comments_sampled.csv')"
    ]
   },
   {
